--- a/Homework3/shop3/shop3/src/components/Ishop3.css
+++ b/Homework3/shop3/shop3/src/components/Ishop3.css
@@ -6,7 +6,7 @@
 table {
   position: relative;
   border-collapse: collapse;
-  margin: 40px;
+  margin: 40px 40px 0px 40px;
   min-width: 500px;
 }
 
@@ -42,7 +42,7 @@ h5 {
 }
 
 .NewProduct {
-  position: absolute;
+  margin-left: 40px;
   width: 180px;
   height: 25px;
 }
