--- a/Homework3/shop3/shop3/src/components/Ishop3.css
+++ b/Homework3/shop3/shop3/src/components/Ishop3.css
@@ -1,6 +1,7 @@
 .Wrapper {
   position: relative;
   display: flex;
+  flex-direction: column;
 }
 
 table {
@@ -19,6 +20,9 @@ th {
 }
 
 .ModalWrapper {
+  position: absolute;
+  left: 550px;
+  top: 0px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -45,4 +49,25 @@ h5 {
   margin-left: 40px;
   width: 180px;
   height: 25px;
+}
+
+.Error {
+  margin-left: 10px;
+  margin-right: 10px;
+  color: red;
+}
+
+.dontShowModal {
+  display: none;
+}
+
+form {
+  position: relative;
+  margin: 10px 40px 0px 40px;
+  width: 260px;
+}
+
+.fr {
+  display: float;
+  float: right;
 }
