fixed axios get on home page, DeleteDialog added

--- a/react-ishop/src/scss/_variables.scss
+++ b/react-ishop/src/scss/_variables.scss
@@ -1,7 +1,7 @@
-$black: #232323;
-$background: #ffdf8c;
+$black: #180e18;
+$background: #a1e2eb;
 $gray-line: #f6f6f6;
-$orange: #fe5f1e;
+$orange: #c949ca;
 
 $container-width: 90%;
 
