--- a/react-ishop/src/components/Search/Search.module.scss
+++ b/react-ishop/src/components/Search/Search.module.scss
@@ -1,6 +1,9 @@
 .root {
   position: relative;
   left: -20px;
+  @media (max-width: 645px) {
+    left: 0px;
+  }
 }
 .input {
   border: 1px solid rgba(0, 0, 0, 0.1);
@@ -9,6 +12,16 @@
   border-radius: 12px;
   font-size: 16px;
   padding-left: 42px;
+  @media (max-width: 1150px) {
+    width: 300px;
+  }
+  @media (max-width: 1010px) {
+    width: 200px;
+  }
+  @media (max-width: 645px) {
+    width: 300px;
+    margin-bottom: 20px;
+  }
 
   &:focus {
     border: 1px solid rgba(0, 0, 0, 0.3);
