--- a/react-ishop/src/scss/app.scss
+++ b/react-ishop/src/scss/app.scss
@@ -72,7 +72,7 @@ body {
     align-items: center;
     justify-content: space-between;
 
-    @media (max-width: 1400px) {
+    @media (max-width: 1372px) {
       // flex-direction: column;
       align-items: baseline;
       .categories {
@@ -111,6 +111,7 @@ body {
     @media (max-width: 540px) {
       .categories {
         width: 300px;
+        margin-top: -20px;
       }
     }
     @media (max-width: 390px) {
@@ -132,6 +133,9 @@ body {
   &--cart {
     max-width: 820px;
     margin: 90px auto;
+    @media (max-width: 430px) {
+      margin: 20px auto;
+    }
     .content__title {
       margin: 0;
     }
@@ -149,7 +153,9 @@ body {
     display: flex;
     align-items: center;
     font-size: 32px;
-
+    @media (max-width: 430px) {
+      font-size: 24px;
+    }
     svg {
       position: relative;
       top: -2px;
@@ -174,6 +180,9 @@ body {
       margin-left: 7px;
       color: #b6b6b6;
       font-size: 18px;
+      @media (max-width: 430px) {
+        font-size: 14px;
+      }
     }
 
     span,
@@ -228,11 +237,41 @@ body {
         font-size: 22px;
         line-height: 27px;
         letter-spacing: 0.01em;
+        @media (max-width: 850px) {
+          font-size: 18px;
+          margin-left: 10px;
+        }
+        @media (max-width: 710px) {
+          margin-left: 15px;
+        }
+        @media (max-width: 530px) {
+          margin-left: 30px;
+          font-size: 14px;
+        }
+        @media (max-width: 470px) {
+          margin-left: 35px;
+          font-size: 12px;
+        }
       }
 
       p {
         font-size: 18px;
         color: #8d8d8d;
+        @media (max-width: 850px) {
+          font-size: 14px;
+          margin-left: 10px;
+        }
+        @media (max-width: 710px) {
+          margin-left: 15px;
+        }
+        @media (max-width: 530px) {
+          margin-left: 30px;
+          font-size: 10px;
+        }
+        @media (max-width: 470px) {
+          margin-left: 35px;
+          font-size: 10px;
+        }
       }
     }
 
@@ -252,6 +291,9 @@ body {
 
       b {
         font-size: 22px;
+        @media (max-width: 470px) {
+          font-size: 14px;
+        }
       }
     }
 
@@ -265,6 +307,14 @@ body {
         font-weight: bold;
         font-size: 22px;
         letter-spacing: 0.01em;
+        @media (max-width: 530px) {
+          margin-left: 10px;
+          font-size: 18px;
+        }
+        @media (max-width: 470px) {
+          margin-left: 20px;
+          font-size: 14px;
+        }
       }
     }
 
@@ -401,5 +451,32 @@ body {
       font-weight: 600;
       font-size: 18px;
     }
+  }
+}
+
+.fullitem {
+  display: block;
+
+  &__title {
+    font-size: 36px;
+    margin-bottom: 30px;
+  }
+  &__content {
+    display: flex;
+    h4 {
+      font-size: 40px;
+      margin-bottom: 20px;
+    }
+    button {
+      margin-bottom: 60px;
+    }
+    p {
+      font-size: 20px;
+    }
+  }
+  &__picture {
+    width: 600px;
+    height: 600px;
+    margin-right: 70px;
   }
 }
