--- a/react-ishop/src/scss/components/_header.scss
+++ b/react-ishop/src/scss/components/_header.scss
@@ -11,6 +11,7 @@
 
     @media (max-width: 645px) {
       flex-direction: column;
+      justify-content: center;
       .header__logo {
         margin-bottom: 20px;
       }
@@ -39,6 +40,9 @@
       margin-left: 10px;
       font-style: italic;
       font-size: 20px;
+      @media (max-width: 900px) {
+        display: none;
+      }
     }
   }
 }
