--- a/react-ishop/src/scss/app.scss
+++ b/react-ishop/src/scss/app.scss
@@ -466,11 +466,41 @@ body {
     h4 {
       font-size: 40px;
       margin-bottom: 20px;
+      @media (max-width: 900px) {
+        font-size: 28px;
+        margin-bottom: 10px;
+        @media (max-width: 550px) {
+          font-size: 20px;
+          margin-bottom: 5px;
+        }
+      }
     }
     button {
       margin-bottom: 60px;
+      @media (max-width: 900px) {
+        margin-bottom: 30px;
+        @media (max-width: 550px) {
+          margin-bottom: 10px;
+        }
+        @media (max-width: 420px) {
+          margin-bottom: 5px;
+        }
+      }
     }
     p {
+      font-size: 20px;
+      @media (max-width: 900px) {
+        font-size: 18px;
+      }
+      @media (max-width: 550px) {
+        font-size: 14px;
+      }
+    }
+  }
+  &__titleSlider {
+    margin-bottom: 30px;
+    @media (max-width: 750px) {
+      margin-top: 20px;
       font-size: 20px;
     }
   }
@@ -478,5 +508,33 @@ body {
     width: 600px;
     height: 600px;
     margin-right: 70px;
+    margin-bottom: 50px;
+    @media (max-width: 1150px) {
+      width: 500px;
+      height: 500px;
+      margin-right: 50px;
+    }
+    @media (max-width: 1000px) {
+      width: 400px;
+      height: 400px;
+      margin-right: 30px;
+    }
+    @media (max-width: 900px) {
+      width: 300px;
+      height: 300px;
+      margin-right: 10px;
+    }
+    @media (max-width: 550px) {
+      width: 150px;
+      height: 150px;
+    }
   }
+}
+
+.slider__image {
+  width: 200px;
+  height: 200px;
+}
+.smallSlider {
+  margin-left: 100px;
 }
